tests/v0-fail/sequence.out
Running <root>/sequence.cli ...

printf "b\na\n"
---
b
a
---
ERROR: pattern literal at line <root>/sequence.cli:5 does not match output line "b"
matching Sequence([Sequence(["a", "b"]), End])
  matching Sequence(["a", "b"])
    matching "a"
    FAILED match: "b"

❌ FAIL

<root>/sequence.cli FAILED
Error: pattern literal at line <root>/sequence.cli:5 does not match output line "b"

