tests/v0-fail/sequence.cli
#!/usr/bin/env clitest --v0

$ printf "b\na\n"
sequence {
    ! a
    ! b
}
